--- a/.github/workflows/label-verify.yml
+++ b/.github/workflows/label-verify.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: zwaldowski/match-label-action@v2
         with:
-          allowed: 'label:fix, label:features, label:docs, label:tests, label:config'
+          allowed: 'fix, feature, documentation, tests, config'
