--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,17 +3,18 @@ tag-template: 'v$NEXT_PATCH_VERSION'
 categories:
   - title: '🚀 New Features'
     labels:
-      - 'type:features'
+      - 'features'
   - title: '🐞 Bugs Fixes'
     labels:
-      - 'type:fix'
+      - 'fix'
   - title: '📚 Documentation'
     labels:
-      - 'type:documentation'
+      - 'documentation'
   - title: '🛠 Configuration'
     labels:
-      - 'type:config'
+      - 'config'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
   ## Changes
+  
   $CHANGES
